HUGE refactor of printing things. Finally separated the Printer out and refactored alot of the code that called into the printing functionality. This was needed after the switch in the reader to use Elements vs Structures. Next to refactor the SA to utilize only Elements now vs Structures. Shouldn't be that bad, but will likely require a custom LinkedList implementation for the ConsElement object.