@@ -7,7 +7,9 @@ package jcl.reader.macrofunction;
 import jcl.LispStruct;
 import jcl.compiler.real.CompilerVariables;
 import jcl.compiler.real.element.ConsElement;
+import jcl.compiler.real.element.ListElement;
 import jcl.compiler.real.element.SimpleElement;
+import jcl.compiler.real.element.SymbolElement;
 import jcl.conditions.exceptions.ReaderErrorException;
 import jcl.lists.ConsStruct;
 import jcl.lists.ListStruct;
@@ -23,6 +25,7 @@ import jcl.symbols.TStruct;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.util.ArrayList;
 import java.util.List;
 
 /**
@@ -41,17 +44,17 @@ final class FeaturesReaderMacroFunction {
 	/**
 	 * Not {@link KeywordSymbolStruct} for processing features that should 'not' be included.
 	 */
-	private static final KeywordSymbolStruct NOT = new KeywordSymbolStruct("NOT");
+	private static final SymbolElement NOT = new SymbolElement(GlobalPackageStruct.KEYWORD.getName(), "NOT");
 
 	/**
 	 * And {@link KeywordSymbolStruct} for processing features that should be included via 'and' operation.
 	 */
-	private static final KeywordSymbolStruct AND = new KeywordSymbolStruct("AND");
+	private static final SymbolElement AND = new SymbolElement(GlobalPackageStruct.KEYWORD.getName(), "AND");
 
 	/**
 	 * Or {@link KeywordSymbolStruct} for processing features that should be included via 'or' operation.
 	 */
-	private static final KeywordSymbolStruct OR = new KeywordSymbolStruct("OR");
+	private static final SymbolElement OR = new SymbolElement(GlobalPackageStruct.KEYWORD.getName(), "OR");
 
 	/**
 	 * Private constructor.
@@ -69,6 +72,8 @@ final class FeaturesReaderMacroFunction {
 	 * 		whether or not the *features* read should be hidden or not (aka. the token is read in but ignored)
 	 */
 	static void readFeatures(final Reader reader, final boolean shouldHideFeatures) {
+		// TODO: i need to revisit this logic at some point...
+
 		final BooleanStruct previousReadSuppress = ReaderVariables.READ_SUPPRESS.getValue();
 		final PackageStruct previousPackage = PackageVariables.PACKAGE.getValue();
 		try {
@@ -102,11 +107,11 @@ final class FeaturesReaderMacroFunction {
 	 * @return true if the provided {@link LispStruct} is a feature that should be read in; false otherwise
 	 */
 	private static boolean isFeature(final SimpleElement lispStruct) {
-		if (lispStruct instanceof ConsElement) {
-			return isListFeature((ConsElement) lispStruct);
+		if (lispStruct instanceof ListElement) {
+			return isListFeature((ListElement) lispStruct);
 		} else {
 			final List<LispStruct> featuresList = CompilerVariables.FEATURES.getValue().getAsJavaList();
-			return featuresList.contains(lispStruct.toLispStruct());
+			return featuresList.contains(lispStruct.toLispStruct()); // TODO: can we fix this??
 		}
 	}
 
@@ -119,8 +124,8 @@ final class FeaturesReaderMacroFunction {
 	 *
 	 * @return true if the provided {@link ListStruct} is a feature that should be read in; false otherwise
 	 */
-	private static boolean isListFeature(final ConsElement listStruct) {
-		return (listStruct.toLispStruct() instanceof ConsStruct) && isConsFeature(listStruct); // TODO: fix
+	private static boolean isListFeature(final ListElement listStruct) {
+		return (listStruct instanceof ConsElement) && isConsFeature((ConsElement) listStruct);
 	}
 
 	/**
@@ -131,18 +136,21 @@ final class FeaturesReaderMacroFunction {
 	 *
 	 * @return true if the provided {@link ConsStruct} is a feature that should be read in; false otherwise
 	 */
-	private static boolean isConsFeature(final ConsElement consStruct) { // TODO: fix
-		final LispStruct first = ((ConsStruct) consStruct.toLispStruct()).getFirst();
+	private static boolean isConsFeature(final ConsElement consStruct) {
+		final List<SimpleElement> elements = consStruct.getElements();
+		final SimpleElement first = elements.get(0);
 
-		if (!(first instanceof KeywordSymbolStruct)) {
+		if (!(first instanceof SymbolElement)) {
 			throw new ReaderErrorException("First element of feature expression must be either: :NOT, :AND, or :OR.");
 		}
 
-		final List<LispStruct> rest = ((ConsStruct) consStruct.toLispStruct()).getRest().getAsJavaList();
+		// TODO: we should replace the ConsStruct elements list with a Customized LinkedList that allows us to get the "rest" of elements
+		final List<SimpleElement> rest = new ArrayList<>(elements);
+		rest.remove(0);
 
-		final KeywordSymbolStruct featureOperator = (KeywordSymbolStruct) first;
+		final SymbolElement featureOperator = (SymbolElement) first;
 		if (featureOperator.equals(NOT)) {
-			return !isFeature((SimpleElement) rest.get(0)); // TODO: FIX THIS!!!!
+			return !isFeature(rest.get(0));
 		} else if (featureOperator.equals(AND)) {
 			return isAndConsFeature(rest);
 		} else if (featureOperator.equals(OR)) {
@@ -160,10 +168,10 @@ final class FeaturesReaderMacroFunction {
 	 *
 	 * @return true if all of the elements are features; false otherwise
 	 */
-	private static boolean isAndConsFeature(final List<LispStruct> elements) { // TODO: fix
+	private static boolean isAndConsFeature(final List<SimpleElement> elements) {
 		boolean tempReturnVal = true;
-		for (final LispStruct lispStruct : elements) {
-			tempReturnVal = tempReturnVal && isFeature((SimpleElement) lispStruct); // TODO: FIX THIS!!!!
+		for (final SimpleElement lispStruct : elements) {
+			tempReturnVal = tempReturnVal && isFeature(lispStruct);
 		}
 		return tempReturnVal;
 	}
@@ -176,10 +184,10 @@ final class FeaturesReaderMacroFunction {
 	 *
 	 * @return true if any of the elements are features; false otherwise
 	 */
-	private static boolean isOrConsFeature(final List<LispStruct> elements) { // TODO: fix
+	private static boolean isOrConsFeature(final List<SimpleElement> elements) {
 		boolean tempReturnVal = false;
-		for (final LispStruct lispStruct : elements) {
-			tempReturnVal = tempReturnVal || isFeature((SimpleElement) lispStruct); // TODO: FIX THIS!!!!
+		for (final SimpleElement lispStruct : elements) {
+			tempReturnVal = tempReturnVal || isFeature(lispStruct);
 		}
 		return tempReturnVal;
 	}
